--- a/index.html
+++ b/index.html
@@ -145,12 +145,13 @@
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a href="index.html" class="nav-link text-muted">
-                    <img src="images\GarageClassic.png" height="150" alt="Classic Garage Logo">
+                    <img src="GarageClassic.png" height="150" alt="Classic Garage Logo">
                 </a>
             </li>
             <li class="fw-bold nav-item">
                 <p class="nav-link text-light mt-3">
                 © 2024 Copyright Classic Garage, designed with love by Zayneb LAMRAIKI 
+                
                 </p>
             </li>
         </ul>
